<resources>
    <string name="app_name">PARKER</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="user_type">Type</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_plate">Plate</string>
    <string name="btn_take_pic">Take A PIC</string>
    <string name="hint_carType">Body type</string>
    <string name="hint_carColor">Car Color</string>
    <string name="hint_carMarka">Car Company</string>
    <string name="hint_carName">Car Name</string>
    <string name="hint_parkName">Park Name</string>
    <string name="input_price">Price Per Hours</string>


    <string name="btn_set_location">set location</string>
    <string name="input_capacity">capacity</string>

    <string-array name="userType">
        <item>Driver</item>
        <item>Parking</item>
    </string-array>
    <string name="title_activity_park_register">Map</string>
    <string name="title_activity_add_park">Map</string>
</resources>
